src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>VSP Global</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Alert_Account_Client_ID__c</fullName>
        <description>This is for reference of Account Client ID for Alert Component Population Apex Class and trigger.</description>
        <formula>Account.Client_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Account Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Member_Plan_Client_ID__c</fullName>
        <description>This is for the Alert Record Population Logic for Apex Classes and Triggers.</description>
        <formula>Member_Plan__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Member Plan Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Member_Plan_Division_ID__c</fullName>
        <description>This is for the Division ID located on the Member Plan for Alert Component Record Population Apex Classes and Triggers.</description>
        <formula>Member_Plan__r.Division_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Member Plan Division ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alerts_Member_Status__c</fullName>
        <description>This is matching criteria for Alerts and Notifications.</description>
        <formula>Member_Plan__r.ClientStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerts Member Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_Appeasement__c</fullName>
        <inlineHelpText>Enter the amount of the appeasement in this format xxxx.xx</inlineHelpText>
        <label>Amount of Appeasement</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Assign__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Un-check to maintain ownership of this Case when it is created.</inlineHelpText>
        <label>Automatically Assign Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Close_Start_Date_Time__c</fullName>
        <description>The date/time a case was assigned to a queue with an automatic closure rule.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto-Close Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brand Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Category__c</fullName>
        <description>Categories for Client Delivery, dependent on the Topic pick list field.</description>
        <label>CD Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5500 Request</fullName>
                </value>
                <value>
                    <fullName>Account Update</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Address/Email Update</fullName>
                </value>
                <value>
                    <fullName>ADP Total Source</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Automated to EM</fullName>
                </value>
                <value>
                    <fullName>Auto Response</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Bad Load</fullName>
                </value>
                <value>
                    <fullName>BCO</fullName>
                </value>
                <value>
                    <fullName>Billing Audit</fullName>
                </value>
                <value>
                    <fullName>Billing Inquiry</fullName>
                </value>
                <value>
                    <fullName>B of A Wires</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Change/Cancel</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Conexis</fullName>
                </value>
                <value>
                    <fullName>Conference Call</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Contact Update</fullName>
                </value>
                <value>
                    <fullName>Contact Updates</fullName>
                </value>
                <value>
                    <fullName>Contract Change</fullName>
                </value>
                <value>
                    <fullName>Converting to Automated/EDI</fullName>
                </value>
                <value>
                    <fullName>Copy of Bill</fullName>
                </value>
                <value>
                    <fullName>Delinquency</fullName>
                </value>
                <value>
                    <fullName>Div Add</fullName>
                </value>
                <value>
                    <fullName>Div Delete</fullName>
                </value>
                <value>
                    <fullName>Duplicate Case</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CalcHours__c</fullName>
        <formula>IF(ISNULL(ClosedDate), 
CASE(MOD( DATEVALUE(CreatedDate) - DATE(1900,7,1),7), 0 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),1,0,2,0,3,0,4,0,5,1,6,2,0),1 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),0,0,1,0,2,0,3,0,4,0,5,2,2),2 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),0,0,1,0,2,0,3,1,2),3 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),0,0,1,0,2,1,2),4 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),0,0,1,1,2),5 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),0,1,2),6 , 
CASE( MOD( today() - DATEVALUE(CreatedDate), 7),6,2,1),999) 
+(FLOOR(( today() - DATEVALUE(CreatedDate))/7)*2), 

CASE(MOD( DATEVALUE(CreatedDate)- DATE(1900,7,1),7),0 , 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),1,0,2,0,3,0,4,0,5,1,6,2,0),1, 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),0,0,1,0,2,0,3,0,4,0,5,2,2),2 , 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),0,0,1,0,2,0,3,1,2),3 , 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),0,0,1,0,2,1,2),4 , 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),0,0,1,1,2),5 , 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),0,1,2),6 , 
CASE( MOD( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate), 7),6,2,1),999) 
+(FLOOR(( DATEVALUE(ClosedDate)- DATEVALUE(CreatedDate))/7)*2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekend Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type A</fullName>
                </value>
                <value>
                    <fullName>Type B</fullName>
                </value>
                <value>
                    <fullName>Type C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Back_Results__c</fullName>
        <label>Call Back Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No Voicemail Box</fullName>
                </value>
                <value>
                    <fullName>Spoke to Caller</fullName>
                </value>
                <value>
                    <fullName>Caller did not leave phone number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callback_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Callback Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallerType__c</fullName>
        <label>Caller Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Retail Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Entered_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Entered Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Intent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Intent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>In-Network Provider</fullName>
                </value>
                <value>
                    <fullName>Out-Of-Network Provider</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Eyeconic Ops</fullName>
                </value>
                <value>
                    <fullName>Retail Store</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseAgeReferInBatch__c</fullName>
        <formula>IF( ISBLANK( ClosedDate ) , (NOW() - CreatedDate )*24, ( ClosedDate - CreatedDate )*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseAgeReferInBatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SLA Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <description>Calculates the elapsed time from the last time an email was received on the Case.</description>
        <formula>IF( ISBLANK( Email_Last_Sent__c ) , (NOW() -  Email_Last_Received__c )*24, ( Email_Last_Sent__c - Email_Last_Received__c )*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Response Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <description>Used for Customer Care record type, page layout, workflow, escalation and assignment rules.</description>
        <label>Case Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Benefits - Eyeconic</fullName>
                </value>
                <value>
                    <fullName>Benefits - In-Network</fullName>
                </value>
                <value>
                    <fullName>Benefits - Out-of-Network</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                </value>
                <value>
                    <fullName>Dr List</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Level App</fullName>
                </value>
                <value>
                    <fullName>Level Frame - Tech</fullName>
                </value>
                <value>
                    <fullName>Level Frame - Charging</fullName>
                </value>
                <value>
                    <fullName>Level Tech Support</fullName>
                </value>
                <value>
                    <fullName>Level Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Member ID Inquiry</fullName>
                </value>
                <value>
                    <fullName>Website Issues - Level Technology</fullName>
                </value>
                <value>
                    <fullName>ID Card Request</fullName>
                </value>
                <value>
                    <fullName>Individual Plan</fullName>
                </value>
                <value>
                    <fullName>Member Info - Not Found</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Website Issues – Eyeconic</fullName>
                </value>
                <value>
                    <fullName>Website Issues – VSP.com</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <inlineHelpText>The relevant category for the Issue or Request.</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account/Contact Maintenance</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Credentialing/Recruiting</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Main client Id field. All other collection fields will pipe to this field. All logic will be based upon this field for client Id.</inlineHelpText>
        <label>Client Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if Customer communicates dissatisfaction in words and/or tone.</inlineHelpText>
        <label>Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consumer_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Main consumer Id field. All other collection fields will pipe to this field. All logic will be based upon this field for consumer Id.</inlineHelpText>
        <label>Consumer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ClientID__c</fullName>
        <formula>Contact.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alerts Contact ClientID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact_Role__r.Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Accepted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_First_Email_Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time First Email Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
        <description>Time stamp of when the last Disposition was clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
        <description>Name of the Call Campaign the record was last called from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Call Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Last_Disposition_DS__c</fullName>
        <description>Name of the last Disposition clicked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DialSource__Next_Call_DS__c</fullName>
        <description>Datetime field used to set the next call datetime for reference in automation or Reports/List Views</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DialSource__Total_Call_Count_DS__c</fullName>
        <description>Total number of calls made on this record</description>
        <label>Total Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DivisionId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DivisionId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Delivery</fullName>
                </value>
                <value>
                    <fullName>Onsite Clinics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Last_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Last Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Last_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Last Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Email_Response__c</fullName>
        <defaultValue>true</defaultValue>
        <label>First Email Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>CASE(1, 
IF(AND(ISPICKVAL(   Priority  , &quot;High&quot;),  Case_Age_2__c  &gt;=24), 1, 0), IMAGE(&apos;/servlet/servlet.FileDownload?file=015U0000005RbT4&apos;,&quot;&quot;,15,15),
IF(AND(ISPICKVAL(   Priority  , &quot;High&quot;), Case_Age_2__c &gt;=21, Case_Age__c&lt;24), 1, 0),IMAGE(&apos;/servlet/servlet.FileDownload?file=015U0000005RbT5&apos;,&quot;&quot;,15,15),
IF(AND(ISPICKVAL(   Priority  , &quot;Medium&quot;), Case_Age_2__c &gt;=48), 1, 0), IMAGE(&apos;/servlet/servlet.FileDownload?file=015U0000005RbT4&apos;,&quot;&quot;,15,15),
IF(AND(ISPICKVAL(   Priority  , &quot;Medium&quot;), Case_Age_2__c &gt;=45, Case_Age_2__c&lt;48), 1, 0),IMAGE(&apos;/servlet/servlet.FileDownload?file=015U0000005RbT5&apos;,&quot;&quot;,15,15),  
IMAGE(&apos;/servlet/servlet.FileDownload?file=015U0000005RbT3&apos;,&quot;&quot;,15,15))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frame_Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frame Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frame_Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frame Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frame_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Frame Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_ANI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IVR supplied ANI</inlineHelpText>
        <label>IVR ANI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Call_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Call Type supplied by the CTI/IVR</inlineHelpText>
        <label>IVR Call Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Caller_Intent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IVR Caller Intent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IVR supplied client Id.</inlineHelpText>
        <label>IVR Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Consumer_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IVR supplied consumer Id.</inlineHelpText>
        <label>IVR Consumer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Contact_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used to store the unique Contact ID written from IVR to the comm service and passed to Salesforce to use to pop CC Portal.</inlineHelpText>
        <label>IVR Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_DNIS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IVR DNIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Danger_of_Missing_for_High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Danger of Missing for High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Danger_of_Missing_for_Medium_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Danger of Missing for Medium Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <inlineHelpText>The Line of Business responsible for working the Case.</inlineHelpText>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Altair</fullName>
                    <color>#0B6FCE</color>
                    <label>Altair</label>
                </value>
                <value>
                    <fullName>Eyefinity</fullName>
                    <color>#78C953</color>
                    <label>Eyefinity</label>
                </value>
                <value>
                    <fullName>Global Customer Care</fullName>
                </value>
                <value>
                    <fullName>Marchon</fullName>
                    <color>#E27001</color>
                    <label>Marchon</label>
                </value>
                <value>
                    <fullName>Optics Group</fullName>
                    <color>#A845DC</color>
                    <label>Optics Group</label>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Vision Care</fullName>
                    <color>#F3D904</color>
                    <label>Vision Care</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <description>Case Owner&apos;s Manager Email</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Case Owner&apos;s Manager Email</inlineHelpText>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Case Owner&apos;s Manager Full Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Case Owner&apos;s Manager Full Name</inlineHelpText>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ContactId</field>
                <operation>equals</operation>
                <valueField>$Source.ContactId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MemberPlan</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Start_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Milestone Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Case_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Case Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Quick-reference notes pertaining to the Case.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Loose_Contact_Lenses__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number of Loose Contact Lenses</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Order Number associated with this case, if no order number enter N/A</inlineHelpText>
        <label>Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to identify when a case has received its first email. Default to checked. Uncheck after first email reply is sent.</description>
        <label>Original Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For need to know if this is the Original Product Information</description>
        <inlineHelpText>Check this box if product information entered above is for the original frame or original contacts.</inlineHelpText>
        <label>Original Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Case_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Case Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Reason_for_REW_or_Cancellation__c</fullName>
        <description>When Other is selected from the Reason for REW or Cancellation drop down field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description when the reason is not listed in the drop down</inlineHelpText>
        <label>Other Reason for REW or Cancellation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resolution_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Resolution Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Topic_Detail__c</fullName>
        <description>When &quot;Other&quot; Topic is selected, provide details in this field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>When &quot;Other&quot; Topic is selected, provide details in this field.</inlineHelpText>
        <label>Other Topic Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>